--- a/packages/components/src/utilities/focusStyle.module.scss
+++ b/packages/components/src/utilities/focusStyle.module.scss
@@ -1,23 +1,19 @@
 /* (c) Copyright Frontify Ltd., all rights reserved. */
 
-@mixin focus-outline-styles($style: 'default') {
+@mixin focus-outline-styles {
     outline-style: none;
     transition-property: box-shadow;
     transition-duration: 0ms;
 
-    @if $style == 'inset' {
-        box-shadow: inset 0 0 0 4px var(--focus-ring-color);
-    } @else {
-        box-shadow:
-            0 0 0 2px var(--base-color),
-            0 0 0 6px var(--focus-ring-color);
-    }
+    box-shadow:
+        0 0 0 2px var(--base-color),
+        0 0 0 6px var(--focus-ring-color);
 }
 
-@mixin focus-outline($style: 'default') {
+@mixin focus-outline {
     &:focus-visible,
     &:focus-visible:hover,
     &:has([data-show-focus-ring='true']) {
-        @include focus-outline-styles($style);
+        @include focus-outline-styles;
     }
 }
